--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -5,6 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".introActivity"
-    android:background="@drawable/back">
+    android:background="@drawable/back3">
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:backgroundTint="#00ff0000"
+        android:onClick="letsgo"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
