--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,16 +13,15 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:background="@drawable/back9">
-
+0.
 
     <ImageView
 
         android:id="@+id/lol"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:scaleType="centerInside"
-
         android:background="@drawable/backgrond"
         />
 
@@ -33,11 +32,11 @@
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/black"
+        android:backgroundTint="#FFCC33"
         android:padding="20dp"
         android:layout_margin="10dp"
         android:text="랜덤 챔피언"
-        android:textColor="@color/white"/>
+        android:textColor="@color/black"/>
 
 
 </RelativeLayout>
